# dotfiles

./: .gitignore  .pre-commit-config.yaml  .profile  .tmux.conf  .zshrc  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  Untitled1.ipynb  flake.nix  install.sh  justfile  pyproject.toml  ruff.toml  shell.nix  starship.toml  tasks.py  vimrc  zshrc
.agents/skills/vimdiff-review/: SKILL.md
.claude/: CLAUDE.md  settings.json  settings.json.template  statusline.sh
.claude/scripts/: focus_window.scpt
.claude/skills/merge-bot-prs/: SKILL.md
.gemini/: settings.json
.gemini/skills/gh-merge-bot-prs/: SKILL.md
.gemini/skills/gh-merge-bot-prs/scripts/: merge_logic.sh
.github/skills/ruff-lint/: SKILL.md
aider/: .aider.conf.yml
byobu/.byobu/: .tmux.conf  prompt
copilot/: config.json
hosts/TetsuonoMacBook-Pro/: profile.nix
modules/home-manager/: default.nix
modules/home-manager/aider/: default.nix
modules/home-manager/byobu/: default.nix
modules/home-manager/claude/: default.nix
modules/home-manager/copilot/: default.nix
modules/home-manager/files/: default.nix
modules/home-manager/git/: default.nix
modules/home-manager/home/: default.nix
modules/home-manager/shell/: default.nix
modules/home-manager/starship/: default.nix
zellij/: config.kdl
