[project]
dependencies = []
description = "Personal dotfiles configuration"
name = "dotfiles"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[dependency-groups]
dev = ["pre-commit>=4.3.0"]

[tool.uv]
package = false

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
